--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -306,7 +306,15 @@ figure {
 }
 img {
   vertical-align: middle;
+    height: auto;
+
 }
+.img2{
+  vertical-align: middle;
+      padding-bottom: 40px;
+    padding-top: 30px;
+	 width: 100%;
+    height: auto;}
 .img-responsive {
   display: block;
   max-width: 100%;
@@ -463,6 +471,7 @@ h6,
 }
 p {
   margin: 0 0 10px;
+  color: white;
 }
 .lead {
   margin-bottom: 20px;
@@ -739,17 +748,17 @@ pre code {
 }
 @media (min-width: 768px) {
   .container {
-    width: 750px;
+    width: 1500px;
   }
 }
 @media (min-width: 992px) {
   .container {
-    width: 970px;
+    width: 1500px;
   }
 }
 @media (min-width: 1200px) {
   .container {
-    width: 1170px;
+    width: 1583px;
   }
 }
 .container-fluid {
@@ -1687,8 +1696,8 @@ output {
   color: #555;
 }
 .form-control {
-  display: block;
-  width: 100%;
+  display: initial;
+  width: 50%;
   height: 34px;
   padding: 6px 12px;
   font-size: 14px;
@@ -3648,7 +3657,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 }
 .navbar {
   position: relative;
-  min-height: 50px;
+  min-height: 100px;
   margin-bottom: 20px;
   border: 1px solid transparent;
 }
@@ -3942,8 +3951,8 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   }
 }
 .navbar-default {
-  background-color: #f8f8f8;
-  border-color: #e7e7e7;
+  background-color: #C1111D;
+  border-color: #C1111D;
 }
 .navbar-default .navbar-brand {
   color: #777;
