--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,90 @@ html {
 *, *:before, *:after {
   box-sizing: inherit;
 }
+.logo{
 
+}
+.sidebar{
+	width: 250px;
+	background-image: url(../images/sidebackground.png);
+	background-size: cover;
+	float:right;
+	padding: 5px;
+	height: 100%;
+	
+}
+
+.rowl{
+  padding-top:10px;	
+}
+#container1 {
+  float:left;
+  width:100%;
+   height: 100%;
+  position: absolute;
+}
+.col1 {
+  float:left;
+  background-image: url(../images/sidebackground.png);
+  height: 800px;
+  text-align: center;
+  padding-top:30px;
+  
+}
+.form-actions {
+	padding-top: 40px;
+    margin: 0;
+    background-color: transparent;
+    text-align: center;
+}
+.edadinput{
+    width: 100%;
+	height: 50px;
+	}
+.centre{
+ width: 200px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+.title{
+    padding-top: 80px;
+	padding-bottom: 30px;
+}
+.nav
+{     background-color: #C1111D;
+}
+.itemImg
+{ padding-left:5px;
+}
+.mainPhoto
+{
+    padding-top: 15px;
+	padding-bottom: 30px;
+}
+#rowl {
+
+  text-align: center;
+  padding-top: 5px;
+  margin-top: 25px;
+}
+#col2 {
+  float:left;
+  width:70%;
+height: 100%;
+}
+.col3 {
+  float:right;
+  background-image: url(../images/sidebackground.png);
+  text-align: center;
+  padding-top:30px;
+    height: 800px;
+}
+}
+.search{
+    padding-right: 20px;
+    padding-left: 20px;
+}
 .logmod {
   display: block;
   position: fixed;
@@ -602,6 +685,7 @@ html {
 	text-align: center;
 	margin: 50px auto
 }
+
 #baseline {
   position: fixed;
   top: 0;
