--- a/css/style.css
+++ b/css/style.css
@@ -51,6 +51,13 @@ html {
   margin-left: auto;
   margin-right: auto;
 }
+
+.centre2{
+ width: 329px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
 .title{
     padding-top: 80px;
 	padding-bottom: 30px;
