--- a/css/image-picker.css
+++ b/css/image-picker.css
@@ -3,8 +3,10 @@ ul.thumbnails.image_picker_selector {
   list-style-image: none;
   list-style-position: outside;
   list-style-type: none;
-  padding: 0px;
-  margin: 0px; }
+  padding: 120px;
+  margin: 0px;
+    padding-top: 10px; 
+padding-bottom: 10px;	}
   ul.thumbnails.image_picker_selector ul {
     overflow: auto;
     list-style-image: none;
