--- a/css/style.css
+++ b/css/style.css
@@ -70,15 +70,26 @@ html {
   margin-left: auto;
   margin-right: auto;
 }
+.boton {
+    padding-left: 150px;
+}
+.primer
+{
+    padding-left: 150px;
+}
 
+.seg
+{
+    padding-left: 100px;
+}
 .centre2{
- width: 329px;
+ width: 230px;
   display: block;
   margin-left: auto;
   margin-right: auto;
 }
 .title{
-    padding-top: 80px;
+    padding-top: 0px;
 	padding-bottom: 30px;
 }
 .nav
